@@ -5,6 +5,7 @@ EAPI Ecore_X_Atom ECORE_X_ATOM_COMPOUND_TEXT = 0;
 EAPI Ecore_X_Atom ECORE_X_ATOM_FILE_NAME = 0;
 EAPI Ecore_X_Atom ECORE_X_ATOM_STRING = 0;
 EAPI Ecore_X_Atom ECORE_X_ATOM_TEXT = 0;
+EAPI Ecore_X_Atom ECORE_X_ATOM_X_MOZ_URL = 0;
 EAPI Ecore_X_Atom ECORE_X_ATOM_UTF8_STRING = 0;
 EAPI Ecore_X_Atom ECORE_X_ATOM_WINDOW = 0;
 EAPI Ecore_X_Atom ECORE_X_ATOM_PIXMAP = 0;
@@ -353,6 +354,7 @@ const Atom_Item atom_items[] =
    { "FILE_NAME", &ECORE_X_ATOM_FILE_NAME },
    { "STRING", &ECORE_X_ATOM_STRING },
    { "TEXT", &ECORE_X_ATOM_TEXT },
+   { "X_MOZ_URL", &ECORE_X_ATOM_X_MOZ_URL },
    { "UTF8_STRING", &ECORE_X_ATOM_UTF8_STRING },
    { "WINDOW", &ECORE_X_ATOM_WINDOW },
    { "PIXMAP", &ECORE_X_ATOM_PIXMAP },
